# git-gerrit

./: .gitignore  CMakeLists.txt  Makefile  README.md  cpanfile  git-gerrit  git-gerrit-add-change-ids  git-gerrit-change-ids  git-gerrit-init  git-gerrit-push  git-gerrit-setup  git-gerrit_0.001.orig.tar.gz.delta  git-gerrit_0.001.orig.tar.gz.id  git-gerrit_0.002.orig.tar.gz.delta  git-gerrit_0.002.orig.tar.gz.id  git-gerrit_0.005.orig.tar.gz.delta  git-gerrit_0.005.orig.tar.gz.id  git-gerrit_0.006.orig.tar.gz.delta  git-gerrit_0.006.orig.tar.gz.id  git-gerrit_0.007.orig.tar.gz.delta  git-gerrit_0.007.orig.tar.gz.id  project.config
debian/: .git-dpm  changelog  control
t/: git-gerrit-init-with-old-origin-remote.t  git-gerrit-init-with-remote.t  git-gerrit-subcommands.t  git-gerrit.t  git-gettit-init-with-remote.t
t/git-gerrit-change-ids/: basic.t  merge.t
t/git-gerrit-init/: options.t  with-old-origin.t  with-origin.t
t/git-gerrit-push/: basic.t
t/lib/Git/Repository/Plugin/: Test.pm
t/lib/Test/: GitGerrit.pm  System.pm
